Tests/Should_fail/cyclic.int
let x : ('a *'a *'a -> ''b) -> 'a -> ''b = \ f -> fn x -> f (x, x)
